--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,6 +19,6 @@ set -g @catppuccin_flavour "macchiato"
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 
-run "~/.tmux/plugins/tpm/tpm"
+run "~/.config/tmux/plugins/tpm/tpm"
 
 
