Added fzf url for tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,7 +12,12 @@ bind -n C-L next-window
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 
+set -g @plugin 'wfxr/tmux-fzf-url'
+# open tmux-fzf-url in a tmux v3.2+ popup
+set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --tac --border --no-preview'
+
 set -g @plugin "christoomey/vim-tmux-navigator"
+
 set -g @plugin "catppuccin/tmux"
 set -g @catppuccin_flavour "macchiato"
 
