--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,9 +12,7 @@ bind -n C-L next-window
 bind '"' split-window -v -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 
-set -g @plugin 'wfxr/tmux-fzf-url'
-# open tmux-fzf-url in a tmux v3.2+ popup
-set -g @fzf-url-fzf-options '-w 50% -h 50% --multi -0 --tac --border --no-preview'
+set -g @plugin "wfxr/tmux-fzf-url"
 
 set -g @plugin "christoomey/vim-tmux-navigator"
 
@@ -24,6 +22,8 @@ set -g @catppuccin_flavour "macchiato"
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 
-run "~/.config/tmux/plugins/tpm/tpm"
+# open tmux-fzf-url in a tmux v3.2+ popup
+set -g @fzf-url-fzf-options "-w 50% -h 50% --multi -0 --tac --border --no-preview"
 
+run "~/.config/tmux/plugins/tpm/tpm"
 
