Added new plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,7 +6,8 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
+set-option -g status-position top
+ 
 bind -n C-H previous-window
 bind -n C-L next-window
 bind '"' split-window -v -c "#{pane_current_path}"
